--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+# **/.mvn/wrapper/*
+# !**/.mvn/wrapper/maven-wrapper.properties
+mvnw.cmd
+mvnw
+
 ### STS ###
 .apt_generated
 .classpath
